--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,12 @@
 #container a {
   text-decoration: none;
 }
+
+
+code {
+  font-family: Consolas,"courier new";
+  font-family: monospace;
+  background-color: #f1f1f1;
+  padding: 20px;
+  font-size: 105%;
+}
