--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
     <p><strong class="ion-padding">Angular-Klasha package testing</strong></p>
     <br>
     <div class="ion-margin">
-      <ion-button angular-klasha class="ion-no-margin" shape="round" color="success" [klashaOptions]="options"
+      <ion-button angular-klasha class="ion-no-margin" shape="round" color="dark" [klashaOptions]="options"
         (callBack)="paymentDone($event)" (click)="paymentInit($event)">
         Directive Button Pay
       </ion-button>
